--- a/Crops.ipynb
+++ b/Crops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwv81N2mGjylEDXGHVjXuT"
+      "authorship_tag": "ABX9TyN2eSMal2XY7QCwjp1QNcVP"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 51,
       "metadata": {
         "id": "Uk89BW-Flmb7"
       },
@@ -28,6 +28,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import plotly.express as px\n",
+        "import warnings\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1341,6 +1342,9 @@
     {
       "cell_type": "code",
       "source": [
+        "warnings.filterwarnings(\"ignore\")\n",
+        "warnings.filterwarnings(\"ignore\", message=\"[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\")\n",
+        "\n",
         "clf = LazyClassifier(verbose=0,ignore_warnings=True, custom_metric=None)\n",
         "models,predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
         "\n",
@@ -1351,22 +1355,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yFlJEbarthOW",
-        "outputId": "b6791e8f-103f-48d7-f8af-5588d92ad92a"
+        "outputId": "ebf610fb-44ee-424f-829a-03d0085e6d35"
       },
-      "execution_count": 27,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 97%|█████████▋| 28/29 [00:09<00:00,  3.25it/s]"
+            " 97%|█████████▋| 28/29 [00:06<00:00,  6.16it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000468 seconds.\n",
+            "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000283 seconds.\n",
             "You can set `force_col_wise=true` to remove the overhead.\n",
             "[LightGBM] [Info] Total Bins 1339\n",
             "[LightGBM] [Info] Number of data points in the train set: 1760, number of used features: 7\n",
@@ -2633,7 +2637,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 29/29 [00:11<00:00,  2.53it/s]"
+            "100%|██████████| 29/29 [00:07<00:00,  3.69it/s]"
           ]
         },
         {
@@ -2673,31 +2677,31 @@
             "                               Time Taken  \n",
             "Model                                      \n",
             "GaussianNB                           0.03  \n",
-            "RandomForestClassifier               1.89  \n",
-            "QuadraticDiscriminantAnalysis        0.12  \n",
-            "BaggingClassifier                    0.20  \n",
-            "ExtraTreesClassifier                 0.46  \n",
-            "XGBClassifier                        0.54  \n",
-            "DecisionTreeClassifier               0.04  \n",
-            "LGBMClassifier                       1.85  \n",
-            "LabelPropagation                     0.32  \n",
-            "LabelSpreading                       0.72  \n",
+            "RandomForestClassifier               0.43  \n",
+            "QuadraticDiscriminantAnalysis        0.02  \n",
+            "BaggingClassifier                    0.17  \n",
+            "ExtraTreesClassifier                 0.42  \n",
+            "XGBClassifier                        0.46  \n",
+            "DecisionTreeClassifier               0.05  \n",
+            "LGBMClassifier                       1.75  \n",
+            "LabelPropagation                     0.25  \n",
+            "LabelSpreading                       0.70  \n",
             "SVC                                  0.09  \n",
-            "LogisticRegression                   0.67  \n",
-            "LinearSVC                            0.24  \n",
-            "CalibratedClassifierCV               1.38  \n",
-            "KNeighborsClassifier                 0.11  \n",
-            "LinearDiscriminantAnalysis           0.10  \n",
-            "NuSVC                                1.10  \n",
+            "LogisticRegression                   0.42  \n",
+            "LinearSVC                            0.21  \n",
+            "CalibratedClassifierCV               1.35  \n",
+            "KNeighborsClassifier                 0.08  \n",
+            "LinearDiscriminantAnalysis           0.07  \n",
+            "NuSVC                                0.30  \n",
             "ExtraTreeClassifier                  0.03  \n",
-            "NearestCentroid                      0.09  \n",
-            "SGDClassifier                        0.14  \n",
-            "PassiveAggressiveClassifier          0.28  \n",
-            "Perceptron                           0.19  \n",
-            "BernoulliNB                          0.08  \n",
-            "RidgeClassifier                      0.04  \n",
-            "RidgeClassifierCV                    0.05  \n",
-            "AdaBoostClassifier                   0.58  \n",
+            "NearestCentroid                      0.02  \n",
+            "SGDClassifier                        0.13  \n",
+            "PassiveAggressiveClassifier          0.05  \n",
+            "Perceptron                           0.04  \n",
+            "BernoulliNB                          0.05  \n",
+            "RidgeClassifier                      0.02  \n",
+            "RidgeClassifierCV                    0.04  \n",
+            "AdaBoostClassifier                   0.55  \n",
             "DummyClassifier                      0.02  \n"
           ]
         },
